--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.8.0",
     "mongoose": "^8.4.4",
+    "mongoose-aggregate-paginate-v2": "^1.1.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.4"
   }
