--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@react-pdf-viewer/zoom": "^3.12.0",
     "axios": "^1.7.2",
     "react": "^18.3.1",
+    "react-awesome-button": "^7.0.5",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-pdf": "^9.1.0",
